--- a/style.css
+++ b/style.css
@@ -160,3 +160,14 @@ ul {
 .button-draw:hover {
     background-color: var(--color-button-hover);
 }
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-left: 10px;
+}
+
+.reset_button {
+    width: 50px;
+}
